--- a/index.html
+++ b/index.html
@@ -1,1 +1,176 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Zhicheng Cui's homepage">
+    <meta name="author" content="Zhicheng Cui">
+    <title>Zhicheng Cui</title>
+    <link href="https://www.zealcui.github.io/zhicheng/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://www.zealcui.github.io/zhicheng/css/navbar.css" rel="stylesheet">
+    <link href="https://www.zealcui.github.io/zhicheng/css/custom.css" rel="stylesheet">
+    <style type="text/css">
+      a {
+      color: #1772d1;
+      text-decoration:none;
+      }
+      a:focus, a:hover {
+      color: #f09227;
+      text-decoration:none;
+      }
+      body,td,th {
+      font-family: 'Lato', Verdana, Helvetica, sans-serif;
+      font-size: 14px
+      }
+      strong {
+      font-family: 'Lato', Verdana, Helvetica, sans-serif;
+      font-size: 14px
+      }
+      heading {
+      font-family: 'Lato', Verdana, Helvetica, sans-serif;
+      font-size: 15px;
+      font-weight: 700
+      }
+      li {
+      padding: 3px;
+      }
+    </style>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)}
+       )(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-76368008-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+</head>
+
+<body>
+    <div class="container">
+        <!-- Static navbar -->
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="https://www.zealcui.github.io/">Zhicheng Cui</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="https://www.zealcui.github.io/index.html">Home</a></li>
+                        <!--
+                        <li class="dropdown">
+                            <a href="https://zealcui.github.io/software.html" class="dropdown-toggle" data-toggle="dropdown">Software<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a herf="https://zealcui.github.io/aoe.html">AOE</a></li>
+                            </ul>
+                        </li>
+                        -->
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+            <!--/.container-fluid -->
+        </nav>
+        <!-- Main component for a primary marketing message or call to action -->
+        <div class="starter-template">
+            <h3>Zhicheng Cui</h3>
+            <div class="row">
+                <div class="col-xs-8 col-sm-8">
+                    <p>
+                        Department of Computer Science and Engineering
+                        <br> Washington University in St Louis
+                        <br>
+                        </p><h5><b>Contact info.</b></h5>
+                        Office: Jolley Hall #420
+                        <br> Adress: Campus Box 1045, One Brookings Drive, St Louis, 63130
+                        <br> E-mail: z.cui {at} wustl.edu
+                        <br>
+                    <p></p>
+                </div>
+                <div class="col-xs-4 col-sm-4">
+                    <img src="./zhicheng/face.png" alt="face" width="200" height="200">
+                </div>
+            </div>
+            <hr>
+            <p>
+                I just obtained my Ph.D. degree in <a href="https://www.cse.wustl.edu/" target="_blank">Computer Science</a> from <a href="https://www.wustl.edu/" target="_blank">Washington University in St Louis</a> under the supervision of <a href="https://www.cse.wustl.edu/~chen/" target="_blank">Prof. Yixin Chen</a>. I received my B.E. degree from <a href="https://en.cs.ustc.edu.cn/" target="_blank">School of Computer Science and Technology</a> at <a href="https://en.ustc.edu.cn/" target="_blank"> The University of Science and Technology of China</a> in 2014.  My research interests are deep learning, interpretable machine learning and security of machine learning. I'm joining Google in Nov. 2019. 
+               <!-- <a href="****">(CV)</a> -->
+            </p>
+            
+            <h3>Publications<font size="-1"><a href="https://scholar.google.com/citations?user=YCt19WMAAAAJ&hl=en" target="_blank"> [Google Scholar]</a><a href="https://dblp.org/pers/hd/c/Cui:Zhicheng" target="_blank">[DBLP]</a></font></h3> 
+            <!--<a href="https://scholar.google.com/citations?user=YCt19WMAAAAJ&hl=en">Google Scholar</a>-->
+            <ul>
+
+                <li>
+                    <b>Z. Cui</b>, B. Fritz, C. King, M. Avidan, Y. Chen, <b> A Factored Generalized Additive Model for Clinical Decision Support in the Operating Room</b>,
+                    <em>Proc. American Medical Informatics Annual Symposium (AMIA-19), 2019.</em><a href="https://arxiv.org/abs/1907.12596" target="">(PDF)</a>
+                </li>
+                <li>
+                    B. Fritz<b>*</b>, <b>Z. Cui*</b>,  M. Zhang, Y. He, Y. Chen, A. Kronzer, A. Ben Abdallah, C. King, M. Avidan, <b> A Deep Learning Model for Predicting 30-day Postoperative Mortalit</b>,
+                    <em>British Journal of Anaesthesia (BJA-19), 2019.</em><a href="https://www.sciencedirect.com/science/article/pii/S0007091219306361" target="">(PDF)</a>(<b>*</b>equal contributions)
+                </li>
+
+
+                <li>
+                    M. Zhang, S. Jiang, <b>Z. Cui</b>, R. Garnett, and Y. Chen, <b>D-VAE: A Variational Autoencoder for Directed Acyclic Graphs</b>, <em>Advances in Neural Information Processing Systems (NeurIPS-19), 2019.</em><a href="https://arxiv.org/pdf/1904.11088.pdf" target="_blank">(PDF)</a><a href="https://github.com/muhanzhang/DVAE" target="_blank">(CODE)</a>
+                </li>
+
+
+                <li>
+                    <b>Z. Cui</b>, M. Zhang, Y. Chen, <b> Deep Embedding Logistic Regression</b>,
+                    <em>Proc. IEEE International Conference on Big Knowledge (ICBK-18), 2018.</em><a href="https://www.zealcui.github.io/papers/DELR_ICBK.pdf" target="_blank">(PDF)</a>
+                </li>
+                <li>
+                    M. Zhang, <b>Z. Cui</b>, M. Neumann, Y. Chen, <b> An End-to-End Deep Learning Architecture for Graph Classification</b>,
+                    <em>Proc. Association for the Advancement of Artificial Intelligence (AAAI-18), 2018.</em> <a href="http://www.cse.wustl.edu/~muhan/papers/AAAI_2018_DGCNN.pdf" target="_blank">(PDF)</a> <a href="https://github.com/muhanzhang/DGCNN" target="_blank">(CODE)</a>
+                </li>
+
+                <li>
+                M. Zhang, <b>Z. Cui</b>, S. Jiang, Y. Chen, <b> Beyond Link Prediction: Predicting Hyperlinks in Adjacency Space</b>,
+                    <em>Proc. Association for the Advancement of Artificial Intelligence (AAAI-18), 2018.</em><a href="http://www.cse.wustl.edu/~muhan/papers/AAAI_2018_Hyperlink.pdf" target="_blank">(PDF)</a> <a href="https://github.com/muhanzhang/HyperLinkPrediction" target="_blank">(CODE)</a>
+                </li>
+
+                <li>
+                    H. Wang, <b>Z. Cui</b>, Y. Chen, A. Abdallah, A. Kronzer, M. Avidan, <b>Predicting Hospital Readmission via Cost-sensitive Deep Learning.</b>,
+                    <em>IEEE/ACM Transactions on Computational Biology and Bioinformatics, 2018</em>
+                </li>
+
+                <li>
+                    <b>Z. Cui</b>, W. Chen, Y. Chen, <b>Multi-Scale Convolutional Neural Network for Time Series Classification</b>,
+                    <em>arXive preprint, arXive:1603.06995, 2016.</em><a href="http://arxiv.org/abs/1603.06995" target="_blank">(PDF)</a> <a href="https://www.zealcui.github.io/projects/mcnn" target="_blank">(CODE)</a>
+                    </li>
+                <li>
+                    <b>Z. Cui</b>, W. Chen, Y. He, Y. Chen, <b>Optimal Action Extraction for Random Forests and Boosted Trees</b>,
+                    <em>Proc. ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD-15), 2015.</em> <a href="http://dl.acm.org/citation.cfm?id=2783281" target="_blank">(PDF)</a> <a href="https://www.zealcui.github.io/projects/ILP.tar.gz" target="_blank">(CODE)</a>
+                </li>
+
+                <li>
+                    Y. Wang, W. Chen, K. Heard, M. Kollef, T. Bailey, <b>Z. Cui</b>, Y. He, C. Lu, and Y. Chen, <b>Mortality Prediction in ICUs Using A Novel Time-Slicing Cox Regression Method</b>,
+                    <em>Proc. American Medical Informatics Annual Symposium (AMIA-15), 2015.</em>
+                </li>
+            </ul>
+            
+        </div>
+        <hr>
+        <footer>
+            <p>Last Update: Sep. 3, 2019</p>
+            <p>Created: August 18, 2015</p>
+        </footer>
+
+    </div>
+    <!-- /container -->
+    <!-- Bootstrap core JavaScript
+  ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="./zhicheng/jquery.min.js"></script>
+    <script src="./zhicheng/bootstrap.min.js"></script>
+
+
+</body></html>
