--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Zhicheng Cui's homepage">
     <meta name="author" content="Zhicheng Cui">
     <title>Zhicheng Cui</title>
-    <link href="https://www.zealcui.github.io/zhicheng/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://www.zealcui.github.io/zhicheng/css/navbar.css" rel="stylesheet">
-    <link href="https://www.zealcui.github.io/zhicheng/css/custom.css" rel="stylesheet">
+    <link href="https://www.zealcui.github.io/zealcui/zhicheng/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://www.zealcui.github.io/zealcui/zhicheng/css/navbar.css" rel="stylesheet">
+    <link href="https://www.zealcui.github.io/zealcui/zhicheng/css/custom.css" rel="stylesheet">
     <style type="text/css">
       a {
       color: #1772d1;
@@ -63,7 +63,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="https://www.zealcui.github.io/index.html">Home</a></li>
+                        <li class="active"><a href="https://www.zealcui.github.io">Home</a></li>
                         <!--
                         <li class="dropdown">
                             <a href="https://zealcui.github.io/software.html" class="dropdown-toggle" data-toggle="dropdown">Software<b class="caret"></b></a>
