--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Zhicheng Cui's homepage">
     <meta name="author" content="Zhicheng Cui">
     <title>Zhicheng Cui</title>
-    <link href="https://www.zealcui.github.io/zealcui/zhicheng/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://www.zealcui.github.io/zealcui/zhicheng/css/navbar.css" rel="stylesheet">
-    <link href="https://www.zealcui.github.io/zealcui/zhicheng/css/custom.css" rel="stylesheet">
+    <link href="./zhicheng/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./zhicheng/css/navbar.css" rel="stylesheet">
+    <link href="./zhicheng/css/custom.css" rel="stylesheet">
     <style type="text/css">
       a {
       color: #1772d1;
