update to https

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="https://www.zealcui.github.io/">Zhicheng Cui</a>
+                    <a class="navbar-brand" href="https://zealcui.github.io/">Zhicheng Cui</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="https://www.zealcui.github.io">Home</a></li>
+                        <li class="active"><a href="https://zealcui.github.io/">Home</a></li>
                         <!--
                         <li class="dropdown">
                             <a href="https://zealcui.github.io/software.html" class="dropdown-toggle" data-toggle="dropdown">Software<b class="caret"></b></a>
@@ -125,7 +125,7 @@
 
                 <li>
                     <b>Z. Cui</b>, M. Zhang, Y. Chen, <b> Deep Embedding Logistic Regression</b>,
-                    <em>Proc. IEEE International Conference on Big Knowledge (ICBK-18), 2018.</em><a href="https://www.zealcui.github.io/papers/DELR_ICBK.pdf" target="_blank">(PDF)</a>
+                    <em>Proc. IEEE International Conference on Big Knowledge (ICBK-18), 2018.</em><a href="./papers/DELR_ICBK.pdf" target="_blank">(PDF)</a>
                 </li>
                 <li>
                     M. Zhang, <b>Z. Cui</b>, M. Neumann, Y. Chen, <b> An End-to-End Deep Learning Architecture for Graph Classification</b>,
@@ -144,11 +144,11 @@
 
                 <li>
                     <b>Z. Cui</b>, W. Chen, Y. Chen, <b>Multi-Scale Convolutional Neural Network for Time Series Classification</b>,
-                    <em>arXive preprint, arXive:1603.06995, 2016.</em><a href="http://arxiv.org/abs/1603.06995" target="_blank">(PDF)</a> <a href="https://www.zealcui.github.io/projects/mcnn" target="_blank">(CODE)</a>
+                    <em>arXive preprint, arXive:1603.06995, 2016.</em><a href="http://arxiv.org/abs/1603.06995" target="_blank">(PDF)</a> <a href="./projects/mcnn" target="_blank">(CODE)</a>
                     </li>
                 <li>
                     <b>Z. Cui</b>, W. Chen, Y. He, Y. Chen, <b>Optimal Action Extraction for Random Forests and Boosted Trees</b>,
-                    <em>Proc. ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD-15), 2015.</em> <a href="http://dl.acm.org/citation.cfm?id=2783281" target="_blank">(PDF)</a> <a href="https://www.zealcui.github.io/projects/ILP.tar.gz" target="_blank">(CODE)</a>
+                    <em>Proc. ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD-15), 2015.</em> <a href="http://dl.acm.org/citation.cfm?id=2783281" target="_blank">(PDF)</a> <a href="./projects/ILP.tar.gz" target="_blank">(CODE)</a>
                 </li>
 
                 <li>
