--- a/projects/MCNN/index.html
+++ b/projects/MCNN/index.html
@@ -120,15 +120,15 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 <body data-gr-c-s-loaded="true">
 
 <div class="container">
-<div class="header"><a href="http://www.zealcui.github.io/projects/mcnn/#"><img src="" alt="" name="Insert_logo" width="180" height="90" id="Insert_logo" style="background-color: #C6D580; display:block;"></a> 
+<div class="header"><a href="https://zealcui.github.io/projects/mcnn/#"><img src="" alt="" name="Insert_logo" width="180" height="90" id="Insert_logo" style="background-color: #C6D580; display:block;"></a> 
     <!-- end .header --></div>
   <div class="content">
   <center>
   
     <h1>Multi-Scale Convolutional Neural Network for Time Series Classification (MCNN)</h1>
-    <a target="_blank" href="http://www.zealcui.github.io/"> Zhicheng Cui</a>
-	 <a target="_blank" href="http://www.cse.wustl.edu/~wenlinchen/"> Wenlin Chen</a>
-    <a target="_blank" href="http://www.cse.wustl.edu/~ychen/"> Yixin Chen</a>
+    <a target="_blank" href="https://zealcui.github.io/"> Zhicheng Cui</a>
+	 <a target="_blank" href="https://cse.wustl.edu/~wenlinchen/"> Wenlin Chen</a>
+    <a target="_blank" href="https://cse.wustl.edu/~ychen/"> Yixin Chen</a>
 	</center> 
 	<center>
 		<h1></h1>
@@ -147,8 +147,8 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	efficient, as it naturally leverages GPU computing. We conduct comprehensive empirical evaluation with various existing methods on a large number of 
 	benchmark datasets, and show that MCNN advances the state-of-the-art by achieving superior accuracy performance than other leading methods.</p>   
   
-    <h2>  <a target="_blank" href="http://www.zealcui.github.io/projects/mcnn/mcnn.tar.gz">Python Code Download</a> </h2>
-    <p>For any questions or bug reports, please contact <a target="_blank" href="http://www.zealcui.github.io/">Zhicheng Cui</a> (z.cui AT wustl.edu).</p>
+    <h2>  <a target="_blank" href="./mcnn.tar.gz">Python Code Download</a> </h2>
+    <p>For any questions or bug reports, please contact <a target="_blank" href="https://zealcui.github.io/">Zhicheng Cui</a> (z.cui AT wustl.edu).</p>
     <h2>Reference</h2>
     <p>[1]. Z. Cui, W. Chen and Y. Chen, <em>Multi-Scale Convolutional Neural Network for Time Series Classification</em>, arXiv preprint arXiv:1603.06995, 2016. <a target="_blank" href="http://arxiv.org/abs/1603.06995">(paper)</a></p>
     
