update the code path

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                 <li>
                     <b>Z. Cui</b>, W. Chen, Y. Chen, <b>Multi-Scale Convolutional Neural Network for Time Series Classification</b>,
-                    <em>arXive preprint, arXive:1603.06995, 2016.</em><a href="http://arxiv.org/abs/1603.06995" target="_blank">(PDF)</a> <a href="./projects/mcnn" target="_blank">(CODE)</a>
+                    <em>arXive preprint, arXive:1603.06995, 2016.</em><a href="http://arxiv.org/abs/1603.06995" target="_blank">(PDF)</a> <a href="./projects/MCNN/mcnn.tar.gz" target="_blank">(CODE)</a>
                     </li>
                 <li>
                     <b>Z. Cui</b>, W. Chen, Y. He, Y. Chen, <b>Optimal Action Extraction for Random Forests and Boosted Trees</b>,
